tests/snapshots/examples_fixtures/type_system__failing__31_direct_time_builtin_missing_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/31_direct_time_builtin_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `Time` but the enclosing context does not provide it

  examples/type_system/failing/31_direct_time_builtin_missing_effect.flx:4:5
  |
4 |     now_ms()
  |     ^^^^^^^^
  |     -------- requires `Time`

Hint:
  annotate the enclosing function with `with Time`


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
